# data-proxy

./: .gitignore  README.md  pyproject.toml  run-proxy.sh  start-proxy.sh  startup.sh
.github/workflows/: main_pytestapp.yml
app/: generic_proxy.py  main.py  slack_proxy.py
onsite-manager/: main.py
scripts/: env_sanity_check.sh  format_and_lint.sh  test.sh  test_azure_os.sh
tests/: test_slack_proxy.py
