[tool.poetry]
name = "data-proxy"
version = "0.1.0"
description = "REST based data proxy."
authors = ["raokrutarth"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
gunicorn = "^20.0.4"
uvloop = "^0.14.0"
httptools = "^0.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
